[package]
name = "tether"
description = "Windows that are web views."
license = "MIT"
repository = "https://github.com/quadrupleslap/tether"
version = "0.3.0"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"

[build-dependencies]
bindgen = "0.49"
pkg-config = "0.3"
